--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node/egg-passport-jyb",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "egg, egg-plugin, passport",
   "eggPlugin": {
     "name": "passportJyb"
@@ -11,6 +11,7 @@
     "egg-plugin"
   ],
   "dependencies": {
+    "ali-rds": "^3.0.1",
     "md5": "^2.2.1",
     "sha1": "^1.1.1"
   },
