--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node/egg-passport-jyb",
-  "version": "0.1.7",
+  "version": "0.1.12",
   "description": "egg, egg-plugin, passport",
   "eggPlugin": {
     "name": "passportJyb"
@@ -30,13 +30,13 @@
     "node": ">=8.0.0"
   },
   "scripts": {
-    "start": "NODE_ENV=production egg-scripts start --port=7001 --daemon --title=egg-server-prod --env=prod",
-    "stop": "egg-scripts stop",
+    "start": "NODE_ENV=production egg-scripts start --port=7001 --daemon --title=egg-server-egg-schedule --env=prod",
+    "stop": "egg-scripts stop --title=egg-server-egg-schedule",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
-    "sit": "egg-scripts start --port=7001 --daemon --title=egg-server-sit --env=test",
-    "uat": "NODE_ENV=production egg-scripts start --port=7001 --daemon --title=egg-server-preview --env=uat",
-    "test": "npm run lint -- --fix && npm run test-local",
+    "sit": "egg-scripts start --port=7001 --daemon --title=egg-server-egg-schedule --env=test",
+    "uat": "NODE_ENV=production egg-scripts start --port=7001 --daemon --title=egg-server-egg-schedule --env=uat",
+    "test": " npm run test-local",
     "test-local": "egg-bin test",
     "cov": "egg-bin cov",
     "lint": "eslint .",
