--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node/egg-passport-jyb",
-  "version": "0.1.20",
+  "version": "0.1.22",
   "description": "egg, egg-plugin, passport",
   "eggPlugin": {
     "name": "passportJyb"
@@ -18,6 +18,7 @@
   "devDependencies": {
     "autod": "^3.0.0",
     "autod-egg": "^1.0.0",
+    "debug": "^3.1.0",
     "egg": "^2.0.0",
     "egg-bin": "^4.3.0",
     "egg-ci": "^1.8.0",
